RHAIENG-2846: Add prefetch input data for hermetic codeserver build
Add all prefetch manifests and repo configs needed by cachi2/Konflux
to prefetch dependencies before the hermetic Docker build

- Add git submodule for code-server v4.106.3
- Update .gitignore
- Introduce lock files for rpm, generic artifacts.
- Prefetch all dependencies

Move lockfiles from flat prefetch-input/ into variant subdirectories:
- prefetch-input/odh/ for upstream (UBI/CentOS/EPEL repos)
- prefetch-input/rhds/ for downstream (RHEL subscription repos)
Both variants share repos/ via ../repos/ relative paths.

Update lockfile-generator scripts for the new directory structure:
- hermeto-fetch-rpm.sh: staging directory to prevent cachi2/output wipe,
  fix file ownership for rootful podman (GHA), append module_hotfixes
- create-rpm-lockfile.sh, download-rpms.sh: update help text paths
- README.md: document prefetch-all.sh, odh/rhds variants, --rhds flag

Add prefetch-all.sh orchestrator script to download all hermetic build
dependencies (pip, npm, generic artifacts, RPMs) in a single command.

Minor fixes: centos.repo module_hotfixes, run-code-server.sh extensions dir,
.gitmodules trailing newline.

--- a/.github/workflows/code-quality.yaml
+++ b/.github/workflows/code-quality.yaml
@@ -81,8 +81,9 @@ jobs:
         id: validate-yaml-files
         run: |
           type yamllint || sudo apt-get -y install yamllint
-          # We ignore the insta-merge.yaml and .tekton directory with the konflux pipelines definitions as it's managed by devops (and usually violates rules...).
-          find . -name "*.yaml" | grep -v "./.tekton/" | grep -v "./.github/workflows/insta-merge.yaml" | xargs yamllint --strict --config-file ./ci/yamllint-config.yaml
+          # We ignore .tekton (managed by devops), insta-merge.yaml, and machine-generated .lock.yaml lockfiles
+          # (e.g. rpms.lock.yaml, artifacts.lock.yaml — produced by rpm-lockfile-prototype with non-configurable indentation).
+          find . -name "*.yaml" | grep -v "./.tekton/" | grep -v "./.github/workflows/insta-merge.yaml" | grep -v "\.lock\.yaml$" | xargs yamllint --strict --config-file ./ci/yamllint-config.yaml
           find . -name "*.yml" | grep -v "./.tekton/" | xargs yamllint --strict --config-file ./ci/yamllint-config.yaml
 
       # In some YAML files we use JSON strings, let's check these
